--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Redirect.setUp()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:32</td>   <td>5326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redirect.redirect(java.lang.String, java.lang.String)[pri:1, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">redirect</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:32</td>   <td>5610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Redirect.tearDown()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:33</td>   <td>6247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Redirect.setUp()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:37</td>   <td>10207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redirect.redirect(java.lang.String, java.lang.String)[pri:1, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">redirect</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:40</td>   <td>13302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Redirect.tearDown()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:41</td>   <td>13927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Redirect.setUp()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:45</td>   <td>17913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redirect.redirect(java.lang.String, java.lang.String)[pri:1, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">redirect</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:47</td>   <td>20415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Redirect.tearDown()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:48</td>   <td>21029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Redirect.setUp()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:52</td>   <td>24955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redirect.redirect(java.lang.String, java.lang.String)[pri:1, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">redirect</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:55</td>   <td>27763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Redirect.tearDown()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:55</td>   <td>28503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Redirect.setUp()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:30:59</td>   <td>32412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redirect.redirect(java.lang.String, java.lang.String)[pri:1, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">redirect</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>18/04/18 17:31:02</td>   <td>35327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Redirect.tearDown()[pri:0, instance:com.cpwplc.qa.testpage2.Redirect@68e965f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>18/04/24 11:26:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage.setup()[pri:0, instance:com.cpwplc.qa.endtoend.HomePage@3cc1435c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1607792885</td>   <td></td> </tr>
 </table>
