--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a8684">  <td>18/05/08 14:57:12</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;PayMPageTest.endReport()[pri:0, instance:com.cpw.ews.qa.testcases.PayMPageTest@52a86356]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1549409129</td>   <td></td> </tr>
-<tr bgcolor="9a8684">  <td>18/05/08 14:57:07</td>   <td>-4803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PayMPageTest.navigate_to_PagM_from_homepage_and_verify_pagetitle()[pri:1, instance:com.cpw.ews.qa.testcases.PayMPageTest@52a86356]">navigate_to_PagM_from_homepage_and_verify_pagetitle</td> 
-  <td>main@1549409129</td>   <td></td> </tr>
-<tr bgcolor="9a8684">  <td>18/05/08 14:56:57</td>   <td>-15609</td> <td>&nbsp;</td><td title="&gt;&gt;PayMPageTest.setExtent()[pri:0, instance:com.cpw.ews.qa.testcases.PayMPageTest@52a86356]">&gt;&gt;setExtent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1549409129</td>   <td></td> </tr>
-<tr bgcolor="9a8684">  <td>18/05/08 14:56:57</td>   <td>-15344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PayMPageTest.setup()[pri:0, instance:com.cpw.ews.qa.testcases.PayMPageTest@52a86356]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1549409129</td>   <td></td> </tr>
-<tr bgcolor="9a8684">  <td>18/05/08 14:57:10</td>   <td>-2040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PayMPageTest.teardown(org.testng.ITestResult)[pri:0, instance:com.cpw.ews.qa.testcases.PayMPageTest@52a86356]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1549409129</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:20:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.accept_cookie_test()[pri:1, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">accept_cookie_test</td> 
+  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:17</td>   <td>31230</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.endReport()[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:20:31</td>   <td>-14791</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setExtent()[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&gt;&gt;setExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:20:31</td>   <td>-14530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:20:49</td>   <td>2646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:03</td>   <td>16662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:20:46</td>   <td>503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown(org.testng.ITestResult)[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:01</td>   <td>14719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown(org.testng.ITestResult)[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:15</td>   <td>29524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown(org.testng.ITestResult)[pri:0, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:00</td>   <td>14203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verify_homepage_tile_test()[pri:2, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">verify_homepage_tile_test</td> 
+  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>18/05/11 13:21:14</td>   <td>28236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verify_navigation_to_pagG_page()[pri:3, instance:com.cpw.ews.qa.testcases.HomePageTest@5f282abb]">verify_navigation_to_pagG_page</td> 
+  <td>main@2116908859</td>   <td></td> </tr>
 </table>
